doc/logfile.txt
Class documentation
<---- javadoc command: ---->
J:\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
J:\lib\bluejcore.jar;J:\lib\junit-4.12.jar;J:\lib\junit-jupiter-5.5.2.jar;J:\lib\junit-jupiter-api-5.5.2.jar;J:\lib\junit-jupiter-engine-5.5.2.jar;J:\lib\junit-jupiter-migrationsupport-5.5.2.jar;J:\lib\junit-jupiter-params-5.5.2.jar;J:\lib\junit-platform-commons-1.5.2.jar;J:\lib\junit-platform-console-1.5.2.jar;J:\lib\junit-platform-console-standalone-1.5.2.jar;J:\lib\junit-platform-engine-1.5.2.jar;J:\lib\junit-platform-launcher-1.5.2.jar;J:\lib\junit-platform-reporting-1.5.2.jar;J:\lib\junit-platform-runner-1.5.2.jar;J:\lib\junit-platform-suite-api-1.5.2.jar;J:\lib\junit-platform-testkit-1.5.2.jar;J:\lib\junit-quickcheck-core-0.9.jar;J:\lib\junit-vintage-engine-5.5.2.jar;J:\lib\hamcrest-core-1.3.jar;J:\lib\hamcrest-library-1.3.jar;J:\lib\lang-stride.jar;J:\lib\javafx\lib\javafx.base.jar;J:\lib\javafx\lib\javafx.controls.jar;J:\lib\javafx\lib\javafx.fxml.jar;J:\lib\javafx\lib\javafx.graphics.jar;J:\lib\javafx\lib\javafx.media.jar;J:\lib\javafx\lib\javafx.properties.jar;J:\lib\javafx\lib\javafx.swing.jar;J:\lib\javafx\lib\javafx.web.jar;C:\Users\LordP\Desktop\Schule\W-Seminar\Schiffe versenken im Netzwerk
-d
C:\Users\LordP\Desktop\Schule\W-Seminar\Schiffe versenken im Netzwerk\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\LordP\Desktop\Schule\W-Seminar\Schiffe versenken im Netzwerk\SVView.java
<---- end of javadoc command ---->
Loading source file C:\Users\LordP\Desktop\Schule\W-Seminar\Schiffe versenken im Netzwerk\SVView.java...
C:\Users\LordP\Desktop\Schule\W-Seminar\Schiffe versenken im Netzwerk\SVView.java:128: error: reached end of file while parsing
    }
     ^
1 error
